Fixed a bug in overlay mixin - Fixed z-index issue

--- a/scss/sin-core/mixins/_overlay-mixin.scss
+++ b/scss/sin-core/mixins/_overlay-mixin.scss
@@ -8,6 +8,7 @@
 /// }
 @mixin overlay($color: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1))) {
   position: relative;
+  z-index: -2;
 
   &:after {
     content: '';
@@ -18,6 +19,7 @@
     bottom: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
+    background: $color;
+    z-index: -1;
   }
 }
